tests/paczka1/small_fuzzy/56356570.err
Error in line 1: hpm A873 51,6
Error in line 13: VQ1ftwNpv A873 35,9
Error in line 14: VQ1ftwNpv A269 76,3
Error in line 12: hpm A269 79,7
